Update AUTHORS file and rename files to libvirt-php.[c|h]
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -2,5 +2,5 @@ EXTRA_DIST = generate-api-docs.c
 
 all-am:
 	$(CC) -Wall -o generate-api-docs generate-api-docs.c
-	./generate-api-docs ../src/libvirt.c ../docs/api-reference.html.in
-	./generate-api-docs --private ../src/libvirt.c ../docs/dev-api-reference.html.in
+	./generate-api-docs ../src/libvirt-php.c ../docs/api-reference.html.in
+	./generate-api-docs --private ../src/libvirt-php.c ../docs/dev-api-reference.html.in
