Make doc package noarch
Since documents are not architecture dependent make doc package
be noarch.

Signed-off-by: Lyre <liyong@skybility.com>

--- a/libvirt-php.spec.in
+++ b/libvirt-php.spec.in
@@ -46,6 +46,7 @@ For more details see: http://www.libvirt.org/php/
 %package -n libvirt-php-doc
 Summary:	Document of libvirt-php
 Group:		Development/Libraries/PHP
+BuildArch:	noarch
 Requires:	libvirt-php = %{version}
 
 %description -n libvirt-php-doc
