website: Add php-virt-control to links
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/docs/links.html.in
+++ b/docs/links.html.in
@@ -10,6 +10,7 @@
     <ul>
 	<li><a href="http://libvirt.org">Libvirt</a></li>
         <li><a href="http://www.php.net">PHP</a></li>
+	<li><a href="http://www.php-virt-control.org">php-virt-control (web-based administration tool for PHP)</a></li>
     </ul>
 
   </body>
