--- a/docs/downloads.html.in
+++ b/docs/downloads.html.in
@@ -6,15 +6,17 @@
     <h2>Official Releases</h2>
 
     <p>
-      You can download the second official release, release 0.4.2, from:
+      You can download the third official release, release 0.4.3, from:
     </p>
 
-<pre><a href="http://libvirt.org/sources/php/libvirt-php-0.4.2.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.2.tar.gz</a></pre>
+<pre><a href="http://libvirt.org/sources/php/libvirt-php-0.4.3.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.3.tar.gz</a></pre>
 
     <p>
-      However if you prefer to download the first official release, release 0.4.1, please click here:
+      However if you prefer to download some of the previous official releases please click on the release you want to download:
     </p>
 
+<a href="http://libvirt.org/sources/php/libvirt-php-0.4.2.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.2.tar.gz</a>
+<br />
 <a href="http://libvirt.org/sources/php/libvirt-php-0.4.1.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.1.tar.gz</a>
 
     <h2>GIT source repository</h2>
