Rebase for Fedora
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,7 @@ build:
 install-exec-local:
 	$(INSTALL) -m 644 -D $(PACKAGE).so $(DESTDIR)$(PHPEDIR)/$(PACKAGE).so
 	$(INSTALL) -m 755 -d $(DESTDIR)$(PHPCDIR)
-	$(ECHO) "extension=$(PACKAGE).so" > $(DESTDIR)$(PHPCDIR)/libvirt-php.ini
+	$(ECHO) "extension=$(PACKAGE).so" > $(DESTDIR)$(PHPCDIR)/$(PACKAGE).ini
 
 uninstall-local:
 	$(RM) -f $(DESTDIR)$(PHPCDIR)/$(PACKAGE).ini
