Put socket and VNC functions to separate source files
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,14 +3,15 @@ PHPEDIR=$(shell $(PHPCONFIG) --extension-dir)
 PHPCDIR=$(shell $(PHPCONFIG) --configure-options | sed -n 's|.*--with-config-file-scan-dir=\([^ ]*\).*|\1|p')
 DEFINES=-DHAVE_CONFIG_H
 
-EXTRA_DIST = libvirt-php.c vncfunc.c libvirt-php.h
+EXTRA_DIST = libvirt-php.c sockets.c vncfunc.c libvirt-php.h
 
 all-am: build clean-temp
 
 build:
 	$(CC) $(CFLAGS) -fpic -DCOMPILE_DL_LIBVIRT=1 $(PHPINC) -c -o libvirt-php.o libvirt-php.c $(LIBXML_CFLAGS) $(DEFINES)
 	$(CC) $(CFLAGS) -fpic -DCOMPILE_DL_LIBVIRT=1 -c -o vncfunc.o vncfunc.c $(PHPINC) $(LIBXML_CFLAGS) $(DEFINES)
-	$(CC) $(CFLAGS) -shared $(LIBS) -rdynamic -o $(PACKAGE).so vncfunc.o libvirt-php.o -ldl -lvirt $(LIBXML_LIBS)
+	$(CC) $(CFLAGS) -fpic -DCOMPILE_DL_LIBVIRT=1 -c -o sockets.o sockets.c $(PHPINC) $(LIBXML_CFLAGS) $(DEFINES)
+	$(CC) $(CFLAGS) -shared $(LIBS) -rdynamic -o $(PACKAGE).so vncfunc.o sockets.o libvirt-php.o -ldl -lvirt $(LIBXML_LIBS)
 	$(ECHO) "Extension compiled as $(PACKAGE).so"
 
 install-exec-local:
