--- a/php-libvirt.spec.in
+++ b/php-libvirt.spec.in
@@ -83,7 +83,29 @@ rm -rf %{buildroot}
 
 %changelog
 * Mon Aug 22 2011 Michal Novotny <minovotn@redhat.com> - 0.4.4
-- Several bugfixes and updated SPEC file and codes not to require open tags
+- Several bugfixes for VNC and updated SPEC file
+
+* Thu Aug 11 2011 Michal Novotny <minovotn@redhat.com> - 0.4.3
+- Rebase to 0.4.3 from master branch
+
+* Tue Apr 19 2011 Michal Novotny <minovotn@redhat.com> - 0.4.1-5
+- Minor memory leak fixes
+- Several bug fixes
+
+* Mon Apr 11 2011 Michal Novotny <minovotn@redhat.com> - 0.4.1-4
+- Add new storagepool API functions
+- Add optional xPath argument for *_get_xml_desc() functions
+- Add new network API functions
+- Add new API functions to add/remove disks
+
+* Wed Mar 23 2011 Michal Novotny <minovotn@redhat.com> - 0.4.1-3
+- Add connection information function
+- Add coredump support
+- Add snapshots support
+- Improve error reporting for destructors
+
+* Thu Mar 10 2011 Michal Novotny <minovotn@redhat.com> - 0.4.1-2
+- Changes done to comply with Fedora package policy
 
 * Tue Feb 8 2011 Michal Novotny <minovotn@redhat.com> - 0.4.1
 - Initial commit (from github)
