Add debuginfo package
Upstream fix for bug 732800, patched by Ville Skytta <ville.skytta@iki.fi>.

Signed-off-by: Ville Skytta <ville.skytta@iki.fi>
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/libvirt-php.spec.in
+++ b/libvirt-php.spec.in
@@ -66,6 +66,7 @@ make %{?_smp_mflags}
 %install
 rm -rf %{buildroot}
 make install DESTDIR=%{buildroot}
+chmod +x %{buildroot}%{php_extdir}/libvirt-php.so
 
 %clean
 rm -rf %{buildroot}
