--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,6 +18,14 @@ install-exec-local:
 	$(INSTALL) -m 644 -D $(PACKAGE).so $(DESTDIR)$(PHPEDIR)/$(PACKAGE).so
 	$(INSTALL) -m 755 -d $(DESTDIR)$(PHPCDIR)
 	$(ECHO) "extension=$(PACKAGE).so" > $(DESTDIR)$(PHPCDIR)/libvirt-php.ini
+	$(ECHO) > $(DESTDIR)$(PHPCDIR)/libvirt-php.ini
+	$(ECHO) "[libvirt"] > $(DESTDIR)$(PHPCDIR)/libvirt-php.ini
+	$(ECHO) "# Path to ISO images for VM installations" > $(DESTDIR)$(PHPCDIR)/libvirt-php.ini
+	$(ECHO) "libvirt.iso_path=/var/lib/libvirt/images" > $(DESTDIR)$(PHPCDIR)/libvirt-php.ini
+	$(ECHO) "# Path where disk images for new VMs should be created" > $(DESTDIR)$(PHPCDIR)/libvirt-php.ini
+	$(ECHO) "libvirt.image_path=/var/lib/libvirt/images" > $(DESTDIR)$(PHPCDIR)/libvirt-php.ini
+	$(ECHO) "# Limit maximum number of libvirt connections" > $(DESTDIR)$(PHPCDIR)/libvirt-php.ini
+	$(ECHO) "libvirt.max_connections=5" > $(DESTDIR)$(PHPCDIR)/libvirt-php.ini
 
 uninstall-local:
 	$(RM) -f $(DESTDIR)$(PHPCDIR)/$(PACKAGE).ini
