--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,6 @@
 AC_INIT([libvirt-php], [0.4.5], [http://libvirt.org])
 AM_INIT_AUTOMAKE([-Wall -Werror])
 AC_CONFIG_FILES([Makefile tools/Makefile src/Makefile tests/Makefile docs/Makefile])
-AC_CHECK_LIB([virt], [virConnectOpen], [], AC_MSG_ERROR([You need libvirt to compile this module]))
 AM_INIT_AUTOMAKE([-Wno-portability])
 AM_MAINTAINER_MODE([enable])
 
@@ -16,6 +15,9 @@ AC_CHECK_TOOL([RM], [rm])
 
 dnl Need to test if pkg-config exists
 PKG_PROG_PKG_CONFIG
+
+LIBVIRT_REQUIRED=0.6.2
+PKG_CHECK_MODULES(LIBVIRT, libvirt >= $LIBVIRT_REQUIRED)
 
 dnl ==========================================================================
 dnl required minimum version of libxml2
