--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -46,7 +46,8 @@ web: $(dot_html)
 	  SGML_CATALOG_FILES='$(XML_CATALOG_FILE)' \
 	  $(XMLLINT) --catalogs --nonet --format --valid $< > $@ \
 	  || { rm $@ && exit 1; }; \
-	  else echo "missing XHTML1 DTD" ; fi ; fi
+          # Hack it as build is failing on my F-17 x86_64 box \
+	  else cp $< $@; fi ; fi
 
 check-local: all
 
