add stream support and upload/resize/download for volume
This patch add to libvirt php binding libvirt stream support
Also provide resize/upload/download for libvirt volume

Signed-off-by: Vasiliy Tolstov <v.tolstov@selfip.ru>

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,6 @@
 AC_INIT([libvirt-php], [0.5.0], [http://libvirt.org])
-AM_INIT_AUTOMAKE([-Wall -Werror])
+AM_INIT_AUTOMAKE([-Wall -Werror -Wno-portability])
 AC_CONFIG_FILES([Makefile tools/Makefile src/Makefile tests/Makefile docs/Makefile])
-AM_INIT_AUTOMAKE([-Wno-portability])
 AM_MAINTAINER_MODE([enable])
 
 dnl Checks for programs.
