--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,29 @@
+*.o
+.deps
+.stamp
+/aclocal.m4
+/compile
+/config.guess
+/config.h
+/config.h.in
+/config.sub
+/install-sh
+/libtool
+/libvirt-php.spec
+/libvirt-php-[0-9]*/
+/ltmain.sh
+/missing
+/INSTALL
 Makefile
+Makefile.in
 config.log
 config.status
 configure
 docs/*.html
+docs/*.html.in
 autom4te.cache/
 src/*.so
+stamp-h1
+tools/generate-api-docs
 libvirt-php-*.tar.gz
 *~
