--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,12 @@ AM_INIT_AUTOMAKE([-Wall -Werror -Wno-portability])
 AC_CONFIG_FILES([Makefile tools/Makefile src/Makefile tests/Makefile docs/Makefile])
 AM_MAINTAINER_MODE([enable])
 
+m4_ifndef([LT_INIT], [
+  AM_PROG_LIBTOOL
+], [
+  LT_INIT([shared disable-static])
+])
+
 dnl Checks for programs.
 AC_PROG_CC
 AC_LANG([C])
