--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,4 @@ SUBDIRS = tools src docs tests
 
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = libvirt-php.spec.in
+EXTRA_DIST = libvirt-php.spec.in winsrc
