tests: Clean up Makefile.am
Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@
 /libvirt-php-[0-9]*/
 /ltmain.sh
 /missing
+/tests/*.log
+/tests/*.trs
+/tests/functions.phpt
+/test-driver
 /INSTALL
 Makefile
 Makefile.in
