--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,2 +1,21 @@
-check:
-	./runtests-report.sh
+test_scripts = runtests.sh
+
+TESTS = $(test_scripts)
+EXTRA_DIST = $(test_scripts) \
+	runtests-report.sh \
+	test-connect.phpt \
+	test-conn-limit.phpt \
+	test-domain-create-and-coredump.phpt \
+	test-domain-create-and-get-xpath.phpt \
+	test-domain-create-get-metadata.phpt \
+	test-domain-create.phpt \
+	test-domain-define-create-destroy.phpt \
+	test-domain-define-undefine.phpt \
+	test-domain-snapshot.phpt \
+	test-get-emulator.phpt \
+	test-get-models.phpt \
+	test-get-models-unsupported-hw.phpt \
+	test-install.phpt \
+	test-logging.phpt \
+	test-version-get.phpt \
+	test-version-check.phpt
