--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,6 +3,9 @@ test_scripts = runtests.sh
 TESTS = $(test_scripts)
 EXTRA_DIST = $(test_scripts) \
 	runtests-report.sh \
+	data \
+	functions.phpt.in \
+	php.ini \
 	test-connect.phpt \
 	test-conn-limit.phpt \
 	test-domain-create-and-coredump.phpt \
@@ -19,3 +22,14 @@ EXTRA_DIST = $(test_scripts) \
 	test-logging.phpt \
 	test-version-get.phpt \
 	test-version-check.phpt
+
+runtests.sh: functions.phpt
+
+functions.phpt: functions.phpt.in
+	$(AM_V_GEN)sed \
+		-e 's|[@]abs_srcdir[@]|$(abs_srcdir)|g' \
+	< $< > $@-t && \
+	chmod a+x $@-t && \
+	mv $@-t $@
+
+CLEANFILES = functions.phpt
