Install libvirt-php.ini more wisely
Instead of creating the file directly under the installation
directory, lets just create it locally and copy afterwards.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -148,5 +148,5 @@ AC_SUBST([SHLIB_FLAGS])
 AC_SUBST([PHPIZE])
 AC_SUBST([PHPCONFIG])
 AC_CONFIG_HEADERS([config.h])
-AC_CONFIG_FILES([$PACKAGE.spec])
+AC_CONFIG_FILES([libvirt-php.spec])
 AC_OUTPUT
