--- a/docs/index.html.in
+++ b/docs/index.html.in
@@ -4,7 +4,7 @@
     <h1>Libvirt-php</h1>
 
     <p>libvirt-php, originally called php-libvirt, is a project that was started by Radek Hladik in 2010 to integrate libvirt support to PHP.</p>
-    <p>In February 2011 the binding has been moved to libvirt.org site and it's currently maintained by Red Hat.</p>
+    <p>In February 2011 the binding was moved to libvirt.org.</p>
     <p>
        <b>This project is not affiliated with The PHP Group and the PHP project itself.</b>
     </p>
