configure: Prefer /bin/echo before printf
For some reason, configure think it's good to use 'printf %s\n'
as $(ECHO). Well, it's not. Problem is, the \n at the end - it
does not do what you think. It merely adds 'n' at the end of each
printed string. Therefore, use echo which does not need anything
special.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -15,7 +15,7 @@ AC_LANG([C])
 AC_PROG_INSTALL
 AC_PROG_SED
 AC_PROG_AWK
-AC_CHECK_TOOL([ECHO], [echo])
+AC_PATH_PROG([ECHO], [echo], [])
 AC_CHECK_TOOL([RM], [rm])
 
 dnl Need to test if pkg-config exists
