Distribute the spec file too
So far, only spec.in is distributed. But preprocessed file should
be distributed too, so rpm can be built right from distributed
archive.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,4 @@ SUBDIRS = tools src docs tests
 
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = libvirt-php.spec.in winsrc
+EXTRA_DIST = libvirt-php.spec libvirt-php.spec.in winsrc
