libvirt-php.spec: Don't run configure twice
Currently, the configure script is run twice, Firstly with
arguments defined by rpmbuild, then with our hardcoded ones. This
does not make any sense, since the latter overwrites any result
from the former.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/libvirt-php.spec.in
+++ b/libvirt-php.spec.in
@@ -59,8 +59,7 @@ This package contain the document for libvirt-php.
 %setup -q -n libvirt-php-%{version}
 
 %build
-%configure
-./configure --with-html-dir=%{_datadir}/doc --with-html-subdir=%{name}-%{version}/html --libdir=%{php_extdir}
+%configure --with-html-dir=%{_datadir}/doc --with-html-subdir=%{name}-%{version}/html --libdir=%{php_extdir}
 make %{?_smp_mflags}
 
 %install
