qemu-agent-command] add libvirt_domain_qemu_agent_command
add another missing libvirt command

Signed-off-by: Vasiliy Tolstov <v.tolstov@selfip.ru>

--- a/configure.ac
+++ b/configure.ac
@@ -34,6 +34,9 @@ fi
 
 LIBVIRT_REQUIRED=1.2.8
 PKG_CHECK_MODULES(LIBVIRT, libvirt >= $LIBVIRT_REQUIRED)
+PKG_CHECK_MODULES(QEMU, libvirt-qemu)
+AC_SUBST([QEMU_CFLAGS])
+AC_SUBST([QEMU_LIBS])
 
 dnl ==========================================================================
 dnl required minimum version of libxml2
