--- a/docs/downloads.html.in
+++ b/docs/downloads.html.in
@@ -6,15 +6,21 @@
     <h2>Official Releases</h2>
 
     <p>
-      You can download the third official release, release 0.4.8, from:
+      You can download the official release, release 0.5.1, from:
     </p>
 
-<pre><a href="http://libvirt.org/sources/php/libvirt-php-0.4.8.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.8.tar.gz</a></pre>
+<pre><a href="http://libvirt.org/sources/php/libvirt-php-0.5.1.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.1.tar.gz</a></pre>
 
     <p>
-      However if you prefer to download any of 3 latest versions of the previous official releases please click on the release you want to download:
+      However if you prefer to download any versions of the previous official releases please click on the release you want to download:
     </p>
 
+<a href="http://libvirt.org/sources/php/libvirt-php-0.5.0.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.0.tar.gz</a>
+<br />
+<a href="http://libvirt.org/sources/php/libvirt-php-0.4.9.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.9.tar.gz</a>
+<br />
+<a href="http://libvirt.org/sources/php/libvirt-php-0.4.8.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.8.tar.gz</a>
+<br />
 <a href="http://libvirt.org/sources/php/libvirt-php-0.4.7.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.7.tar.gz</a>
 <br />
 <a href="http://libvirt.org/sources/php/libvirt-php-0.4.6.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.6.tar.gz</a>
