Introduce a module to check for php extension dir
This module handles the installation path for our library.
Moreover, it allows users to supply a different path under which
they want the library to be installed.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,10 @@ depcomp
 docs/*.html
 docs/*.html.in
 autom4te.cache/
-m4/
+m4/*
 src/*.so
 stamp-h1
 tools/generate-api-docs
 libvirt-php-*.tar.gz
 *~
+!/m4/virt-*.m4
