Introduce a module to check for php extension config dir
Like in the previous commit, do the same for the config file
for our library.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -152,6 +152,7 @@ if test "x$PHPIZE" = "xno"; then
 fi
 
 LIBVIRT_CHECK_PHP_EXTENSIONDIR
+LIBVIRT_CHECK_PHP_CONFDIR
 
 OS=`uname`
 if test "$OS" = "Darwin"; then
@@ -170,3 +171,4 @@ AC_CONFIG_FILES([Makefile tools/Makefile src/Makefile \
 AC_OUTPUT
 
 LIBVIRT_RESULT_PHP_EXTENSIONDIR
+LIBVIRT_RESULT_PHP_CONFDIR
