--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,15 +1,15 @@
-PHPINC=$(shell $(PHPCONFIG) --includes)
 DEFINES=-DHAVE_CONFIG_H
 WL=@WL@
 SHLIB_FLAGS=@SHLIB_FLAGS@
 
 AM_CFLAGS = \
-	$(PHPINC) $(LIBXML_CFLAGS) \
+	$(PHP_CFLAGS) $(LIBXML_CFLAGS) \
 	$(LIBVIRT_CFLAGS) $(QEMU_CFLAGS) $(DEFINES) \
 	-I$(top_srcdir)/winsrc
 
 AM_LDFLAGS = \
 	$(SHLIB_LDFLAGS) \
+	$(PHP_LDFLAGS) \
 	$(LIBXML_LIBS) \
 	$(LIBVIRT_LIBS) \
 	$(QEMU_LIBS)
