Get rid of $DEFINES
This variable only defines -DHAVE_CONFIG_H which is defined by
libtool anyway.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,10 +1,9 @@
-DEFINES=-DHAVE_CONFIG_H
 WL=@WL@
 SHLIB_FLAGS=@SHLIB_FLAGS@
 
 AM_CFLAGS = \
 	$(PHP_CFLAGS) $(LIBXML_CFLAGS) \
-	$(LIBVIRT_CFLAGS) $(QEMU_CFLAGS) $(DEFINES) \
+	$(LIBVIRT_CFLAGS) $(QEMU_CFLAGS) \
 	-I$(top_srcdir)/winsrc
 
 AM_LDFLAGS = \
